--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   
 
-  <script src="main.js"></script>
+  <script src="main.js" defer></script>
   <script src=
   "https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.6.4/math.js"
           integrity=
